# QBT-Controller

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs  qbittorrent.rs  ui.rs
