[package]
name = "qbt-controller"
version = "0.2.0"
edition = "2021"

[build-dependencies]
embed-manifest = "1.3.1"

[dependencies]
native-windows-derive = "1.0.5"
rust-ini = "0.18.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
indoc = "1.0.8"
home = "0.5.4"

[dependencies.native-windows-gui]
version = "1.0.13"
features = ["cursor", "menu", "message-window", "tray-notification"]

[dependencies.reqwest]
version = "0.11.13"
features = ["blocking", "cookies", "json"]
